- fixed gradle test - manual packaging of JavaFX dlls for Windows distribution