@@ -2,7 +2,7 @@ plugins {
     id 'application'
 }
 
-mainClassName = 'steffan.javafxdemo.app.Main'
+mainClassName = 'steffan.javafxdemo.app/steffan.javafxdemo.app.Main'
 
 dependencies {
     api project(':javafxdemo-core')
@@ -11,16 +11,11 @@ dependencies {
     runtimeOnly project(':javafxdemo-csvpersistence')
 }
 
-javaModule.name = 'steffan.javafxdemo.app'
+tasks.compileJava.dependsOn(':javafxdemo-core:compileJava')
 
-javaModule.extraTestModules = ['junit', 'hamcrest.core', 'org.mockito']
-
-test {
-    doFirst {
-        jvmArgs += [
-            '--add-opens', "${javaModule.name}/steffan.javafxdemo.app=junit"
-        ]
+distZip {
+    into("${project.name}") {
+        from 'javaFxRuntimes/win_x64'
+        include 'bin/*'
     }
 }
-
-tasks.compileJava.dependsOn(':javafxdemo-core:compileJava')
